--- a/Elementa/res/values/strings.xml
+++ b/Elementa/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">Elementa</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_player_stats">PlayerStatsActivity</string>
+    <string name="title_activity_combat_result">Elementa</string>
 
 </resources>
